build/nodatime.org/testdeployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodatime-test
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nodatime-test
  template:
    metadata:
      labels:
        run: nodatime-test
    spec:
      containers:
      - image: gcr.io/jonskeet-uberproject/nodatime.org:latest
        imagePullPolicy: IfNotPresent
        name: nodatime-test
        ports:
        - name: http
          containerPort: 80
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
