build/nodatime.org/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodatime
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nodatime
  type: NodePort
