build/nodatime.org/testservice.yml
apiVersion: v1
kind: Service
metadata:
  name: nodatime-test
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nodatime-test
  type: NodePort
